--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,7 +110,7 @@ services:
       LOG_CHANNEL: stack
       LOG_LEVEL: debug
       DB_CONNECTION: pgsql
-      DB_HOST: db-postgres
+      DB_HOST: api-db
       DB_DATABASE: app
       DB_USERNAME: app
       DB_PASSWORD: secret
@@ -140,7 +140,7 @@ services:
       LOG_CHANNEL: stack
       LOG_LEVEL: debug
       DB_CONNECTION: pgsql
-      DB_HOST: db-postgres
+      DB_HOST: api-db
       DB_DATABASE: app
       DB_USERNAME: app
       DB_PASSWORD: secret
@@ -155,14 +155,14 @@ services:
       - ./api:/app
       - uploads:/app/storage/app/public
 
-  db-postgres:
+  api-db:
     image: postgres:14.1-alpine
     environment:
       POSTGRES_USER: app
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: app
     volumes:
-      - db-postgres:/var/lib/postgresql/data
+      - api-db:/var/lib/postgresql/data
     ports:
       - "5432:5432"
 
@@ -225,7 +225,7 @@ services:
   #     - 9200:9200
 
 volumes:
-  db-postgres:
+  api-db:
   uploads:
   esdata:
 
