--- a/panel/package.json
+++ b/panel/package.json
@@ -24,6 +24,7 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.1",
+    "react-sanctum": "^2.3.1",
     "react-scripts": "5.0.0",
     "react-use-storage": "^0.5.1",
     "sass": "^1.45.2",
