--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,11 +113,12 @@ services:
       DB_USERNAME: app
       DB_PASSWORD: secret
       CACHE_DRIVER: redis
-      QUEUE_CONNECTION: redis
       SESSION_DRIVER: redis
       SESSION_CONNECTION: cache
       SESSION_DOMAIN: .pharm.test
       REDIS_HOST: redis
+      QUEUE_CONNECTION: rabbitmq
+      RABBITMQ_HOST: rabbitmq
       MAIL_HOST: mailer
       MAIL_FROM_ADDRESS: info@localhost
       MAIL_FROM_NAME: Сеть аптек 120/80
@@ -140,9 +141,9 @@ services:
       DB_DATABASE: app
       DB_USERNAME: app
       DB_PASSWORD: secret
-      CACHE_DRIVER: redis
-      QUEUE_CONNECTION: redis
-      REDIS_HOST: redis
+      QUEUE_CONNECTION: rabbitmq
+      RABBITMQ_HOST: rabbitmq
+      RABBITMQ_QUEUE: import
       MAIL_HOST: mailer
       MAIL_FROM_ADDRESS: info@localhost
       MAIL_FROM_NAME: Сеть аптек 120/80
@@ -173,14 +174,6 @@ services:
       - traefik.http.routers.mailer.entryPoints=http
       - traefik.http.services.mailer.loadBalancer.server.port=8025
 
-  redis:
-    image: redis:6.2-alpine
-    networks:
-      - traefik-public
-      - default
-    ports:
-      - "6379:6379"
-
   # parser:
   #   build:
   #     context: parser
@@ -197,11 +190,9 @@ services:
       dockerfile: docker/Dockerfile
     environment:
       APP_NAME: Сеть аптек 120/80
-      REDIS_HOST: redis
+      RABBITMQ_HOST: rabbitmq
     volumes:
       - ./bot:/app
-    depends_on:
-      - redis
 
   # elasticsearch:
   #   image: elasticsearch:8.3.2
@@ -220,6 +211,23 @@ services:
   #     - esdata:/usr/share/elasticsearch/data
   #   ports:
   #     - 9200:9200
+
+  redis:
+    image: redis:6.2-alpine
+    networks:
+      - traefik-public
+      - default
+    ports:
+      - "6379:6379"
+  
+  rabbitmq:
+    image: rabbitmq:3.11-management
+    networks:
+      - traefik-public
+      - default
+    ports:
+      - "5672:5672"
+      - "15672:15672"
 
 volumes:
   api-db:
