--- a/api/composer.json
+++ b/api/composer.json
@@ -21,7 +21,8 @@
         "laravel/tinker": "^2.7",
         "phpoffice/phpspreadsheet": "^1.24",
         "predis/predis": "^2.0",
-        "psr/simple-cache": "^2.0"
+        "psr/simple-cache": "^2.0",
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^13.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
