--- a/api/docker/dev/php-cli/Dockerfile
+++ b/api/docker/dev/php-cli/Dockerfile
@@ -4,7 +4,7 @@ RUN apk add --no-cache bash
 
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
-RUN chmod +x /usr/local/bin/install-php-extensions && install-php-extensions gd pdo_pgsql zip
+RUN chmod +x /usr/local/bin/install-php-extensions && install-php-extensions gd pdo_pgsql zip sockets
 
 RUN mv $PHP_INI_DIR/php.ini-development $PHP_INI_DIR/php.ini
 
