--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -135,7 +135,6 @@ services:
     environment:
       APP_NAME: Сеть аптек 120/80
       APP_URL: https://api.120на80.рф
-      LOG_CHANNEL: stderr
       DB_CONNECTION: pgsql
       DB_HOST: api-db
       DB_DATABASE: app
@@ -230,15 +229,14 @@ services:
     environment:
       APP_NAME: Сеть аптек 120/80
       APP_URL: https://api.120на80.рф
-      LOG_CHANNEL: stderr
       DB_CONNECTION: pgsql
       DB_HOST: api-db
       DB_DATABASE: app
       DB_USERNAME: app
       DB_PASSWORD: ${DB_PASSWORD}
       FILESYSTEM_DRIVER: public
-      QUEUE_CONNECTION: redis
-      REDIS_HOST: redis
+      QUEUE_CONNECTION: rabbitmq
+      RABBITMQ_HOST: rabbitmq
     command: sh -c 'php artisan schedule:run'
     volumes:
       - uploads:/app/storage/app/public
@@ -256,22 +254,21 @@ services:
     environment:
       APP_NAME: Сеть аптек 120/80
       APP_URL: https://api.120на80.рф
-      LOG_CHANNEL: stderr
       DB_CONNECTION: pgsql
       DB_HOST: api-db
       DB_DATABASE: app
       DB_USERNAME: app
       DB_PASSWORD: ${DB_PASSWORD}
       FILESYSTEM_DRIVER: public
-      QUEUE_CONNECTION: redis
-      REDIS_HOST: redis
+      QUEUE_CONNECTION: rabbitmq
+      RABBITMQ_HOST: rabbitmq
       MAIL_HOST: smtp.mail.ru
       MAIL_PORT: 465
       MAIL_USERNAME: info@120-na-80.ru
       MAIL_PASSWORD: ${MAIL_PASSWORD}
       MAIL_FROM_ADDRESS: info@120-na-80.ru
       MAIL_FROM_NAME: Сеть аптек 120/80
-    command: sh -c 'wait-for-it redis:6379 -t 60 && php artisan queue:work'
+    command: sh -c 'wait-for-it rabbitmq:5672 -t 60 && php artisan queue:work'
     volumes:
       - uploads:/app/storage/app/public
     deploy:
@@ -280,36 +277,6 @@ services:
         delay: 10s
         max_attempts: 5
         window: 120s
-
-  # api-subscribe:
-  #   image: ${REGISTRY}/pharm-api-php-cli:${IMAGE_TAG}
-  #   environment:
-  #     APP_NAME: Сеть аптек 120/80
-  #     APP_URL: https://api.120на80.рф
-  #     LOG_CHANNEL: stderr
-  #     DB_CONNECTION: pgsql
-  #     DB_HOST: api-db
-  #     DB_DATABASE: app
-  #     DB_USERNAME: app
-  #     DB_PASSWORD: ${DB_PASSWORD}
-  #     FILESYSTEM_DRIVER: public
-  #     QUEUE_CONNECTION: redis
-  #     REDIS_HOST: redis
-  #     MAIL_HOST: smtp.mail.ru
-  #     MAIL_PORT: 465
-  #     MAIL_USERNAME: info@120-na-80.ru
-  #     MAIL_PASSWORD: ${MAIL_PASSWORD}
-  #     MAIL_FROM_ADDRESS: info@120-na-80.ru
-  #     MAIL_FROM_NAME: Сеть аптек 120/80
-  #   command: sh -c 'wait-for-it redis:6379 -t 60 && php artisan redis:subscribe'
-  #   volumes:
-  #     - uploads:/app/storage/app/public
-  #   deploy:
-  #     restart_policy:
-  #       condition: on-failure
-  #       delay: 10s
-  #       max_attempts: 5
-  #       window: 120s
 
   # parser:
   #   image: ${REGISTRY}/pharm-parser:${IMAGE_TAG}
