fix backup path

--- a/api/docker/common/backup/Dockerfile
+++ b/api/docker/common/backup/Dockerfile
@@ -1,12 +1,12 @@
 FROM alpine:3.15
 
-RUN apk add --no-cache python3 py3-pip bash coreutils postgresql-client \
+RUN apk add --no-cache python3 py3-pip bash coreutils postgresql-client rsync \
     && pip3 install --upgrade awscli
 
 COPY ./wait-for-it.sh /usr/local/bin/wait-for-it
 RUN chmod 555 /usr/local/bin/wait-for-it
 
-COPY ./postgres-backup/backup.sh /usr/local/bin/backup
+COPY ./backup/backup.sh /usr/local/bin/backup
 RUN chmod 555 /usr/local/bin/backup
 
 WORKDIR /app
