--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "next": "^12.3.0",
     "next-redux-wrapper": "^7.0.5",
     "popmotion": "^11.0.3",
+    "pure-react-carousel": "^1.30.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-cookie": "^4.1.1",
