--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -145,7 +145,7 @@ services:
       MAIL_FROM_ADDRESS: info@120-na-80.ru
       MAIL_FROM_NAME: Сеть аптек 120/80
       IPINFO_TOKEN: ${IPINFO_TOKEN}
-      # ELASTICSEARCH_HOST: elasticsearch
+      ELASTICSEARCH_HOST: elasticsearch
     volumes:
       - uploads:/app/storage/app/public
     deploy:
@@ -222,6 +222,7 @@ services:
       FILESYSTEM_DRIVER: public
       QUEUE_CONNECTION: redis
       REDIS_HOST: redis
+      ELASTICSEARCH_HOST: elasticsearch
     command: sh -c 'php artisan schedule:run'
     volumes:
       - uploads:/app/storage/app/public
@@ -290,27 +291,22 @@ services:
         parallelism: 1
         delay: 10s
 
-  # elasticsearch:
-  #   image: elasticsearch:8.3.2
-  #   environment:
-  #     - node.name=elasticsearch
-  #     - cluster.name=oms-logs.qa
-  #     - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-  #     - discovery.seed_hosts=elasticsearch
-  #     - cluster.initial_master_nodes=elasticsearch
-  #     - xpack.ml.enabled=false
-  #     - xpack.monitoring.templates.enabled=false
-  #     - xpack.security.enabled=false
-  #     - xpack.watcher.enabled=false
-  #     - bootstrap.memory_lock=false
-  #   volumes:
-  #     - es-data:/usr/share/elasticsearch/data
-  #   deploy:
-  #     mode: global
-  #     endpoint_mode: dnsrr
-  #     resources:
-  #       limits:
-  #         memory: 4G
+  elasticsearch:
+    image: elasticsearch:8.7.0
+    environment:
+      node.name: elasticsearch
+      discovery.type: single-node
+      xpack.ml.enabled: false
+      xpack.security.enabled: false
+      ES_JAVA_OPTS: -Xms512m -Xmx512m
+    volumes:
+      - es-data:/usr/share/elasticsearch/data
+    deploy:
+      mode: global
+      endpoint_mode: dnsrr
+      resources:
+        limits:
+          memory: 4G
 
   redis:
     image: redis:6.2-alpine
