--- a/api/docker/dev/php-fpm/Dockerfile
+++ b/api/docker/dev/php-fpm/Dockerfile
@@ -1,10 +1,7 @@
 FROM php:8.1-fpm-alpine
 
-RUN apk add --no-cache fcgi
-
-ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
-
-RUN chmod +x /usr/local/bin/install-php-extensions && install-php-extensions gd pdo_pgsql zip sockets
+RUN apk add --no-cache fcgi postgresql-dev \
+    && docker-php-ext-install pdo_pgsql sockets
 
 RUN mv $PHP_INI_DIR/php.ini-development $PHP_INI_DIR/php.ini
 
@@ -22,3 +19,7 @@ WORKDIR /app
 
 COPY ./dev/php-fpm/entrypoint.sh /usr/local/bin/docker-php-entrypoint
 RUN chmod +x /usr/local/bin/docker-php-entrypoint
+
+HEALTHCHECK --interval=5s --timeout=3s --start-period=1s \
+    CMD REDIRECT_STATUS=true SCRIPT_NAME=/ping SCRIPT_FILENAME=/ping REQUEST_METHOD=GET \
+    cgi-fcgi -bind -connect 127.0.0.1:9000 || exit 1
