fix bot & add api subscriber

--- a/bot/docker/Dockerfile
+++ b/bot/docker/Dockerfile
@@ -13,3 +13,5 @@ RUN chmod 555 /usr/local/bin/wait-for-it
 RUN addgroup -g 1000 app && adduser -u 1000 -G app -s /bin/sh -D app
 
 COPY . .
+
+USER app
