fix php-cli perm

--- a/api/docker/prod/php-cli/Dockerfile
+++ b/api/docker/prod/php-cli/Dockerfile
@@ -37,6 +37,7 @@ WORKDIR /app
 COPY --from=builder /app ./
 COPY ./ ./
 
-RUN php artisan key:generate --ansi && php artisan storage:link --ansi
+RUN chown app:app -R ./storage ./bootstrap/cache \
+    && php artisan key:generate --ansi && php artisan storage:link --ansi
 
 USER app
