--- a/panel/package.json
+++ b/panel/package.json
@@ -7,6 +7,7 @@
     "@types/draft-convert": "^2.1.4",
     "@types/draft-js": "^0.11.9",
     "@types/node": "^16.7.13",
+    "@types/punycode": "^2.1.0",
     "@types/react": "^17.0.20",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.9",
@@ -18,6 +19,7 @@
     "draft-convert": "^2.1.12",
     "draft-js": "^0.11.7",
     "moment": "^2.29.1",
+    "punycode": "^2.3.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
