--- a/client/docker/prod/nginx/conf.d/default.conf
+++ b/client/docker/prod/nginx/conf.d/default.conf
@@ -7,6 +7,13 @@ server {
 
     resolver 127.0.0.11 ipv6=off;
 
+    add_header X-Frame-Options "SAMEORIGIN";
+
+    location /health {
+        add_header Content-Type text/plain;
+        return 200 'alive';
+    }
+
     location /_next/static {
         alias /app/.next/static;
         expires 7d;
@@ -15,7 +22,6 @@ server {
     }
 
     location / {
-        add_header X-Frame-Options "SAMEORIGIN";
         proxy_set_header  Host $host;
         proxy_pass        http://client-node:3000;
         proxy_redirect    off;
