--- a/client/docker/dev/node/Dockerfile
+++ b/client/docker/dev/node/Dockerfile
@@ -1,5 +1,7 @@
-FROM node:17-alpine
+FROM node:20-alpine
 
 RUN apk add --no-cache curl
 
 WORKDIR /app
+
+HEALTHCHECK --interval=5s --timeout=3s --start-period=1s CMD curl --fail http://127.0.0.1:3000/health || exit 1
