--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -223,7 +223,7 @@ services:
       QUEUE_CONNECTION: redis
       REDIS_HOST: redis
       ELASTICSEARCH_HOST: elastic
-    command: sh -c 'php artisan schedule:run'
+    command: sh -c 'wait-for-it elastic:9200 -t 60 && php artisan search:init && php artisan schedule:run'
     volumes:
       - uploads:/app/storage/app/public
     deploy:
@@ -283,7 +283,8 @@ services:
       MAIL_PASSWORD: ${MAIL_PASSWORD}
       MAIL_FROM_ADDRESS: info@120-na-80.ru
       MAIL_FROM_NAME: Сеть аптек 120/80
-    command: sh -c 'wait-for-it redis:6379 -t 60 && php artisan redis:subscribe'
+      ELASTICSEARCH_HOST: elastic
+    command: sh -c 'wait-for-it redis:6379 -t 60 && wait-for-it elastic:9200 -t 60 && php artisan redis:subscribe'
     volumes:
       - uploads:/app/storage/app/public
     deploy:
