--- a/panel/package.json
+++ b/panel/package.json
@@ -3,35 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@reduxjs/toolkit": "^1.8.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/draft-convert": "^2.1.4",
-    "@types/draft-js": "^0.11.9",
-    "@types/node": "^16.7.13",
+    "@types/draft-js": "^0.11.11",
+    "@types/node": "^20.2.5",
     "@types/punycode": "^2.1.0",
-    "@types/react": "^17.0.20",
-    "@types/react-beautiful-dnd": "^13.1.2",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^18.2.8",
+    "@types/react-beautiful-dnd": "^13.1.4",
+    "@types/react-dom": "^18.2.4",
     "@types/react-draft-wysiwyg": "^1.13.4",
-    "antd": "^4.18.2",
-    "axios": "^0.26.1",
-    "classnames": "^2.3.1",
-    "dotenv": "^16.0.0",
-    "draft-convert": "^2.1.12",
+    "antd": "^5.5.2",
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
+    "dotenv": "^16.1.3",
+    "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
-    "moment": "^2.29.1",
+    "moment": "^2.29.4",
     "punycode": "^2.3.0",
-    "react": "^17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^17.0.2",
-    "react-draft-wysiwyg": "^1.14.7",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.2.1",
-    "react-sanctum": "^2.3.1",
-    "react-scripts": "5.0.0",
+    "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-redux": "^8.0.7",
+    "react-router-dom": "^6.11.2",
+    "react-sanctum": "^3.0.0",
+    "react-scripts": "^5.0.1",
     "react-use-storage": "^0.5.1",
-    "sass": "^1.45.2",
-    "typescript": "^4.6.3",
-    "web-vitals": "^2.1.0"
+    "sass": "^1.62.1",
+    "typescript": "^5.1.3",
+    "web-vitals": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
