--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -224,7 +224,7 @@ services:
       QUEUE_CONNECTION: redis
       REDIS_HOST: redis
       ELASTICSEARCH_HOST: elastic
-    command: sh -c 'wait-for-it elastic:9200 -t 60 && php artisan schedule:run'
+    command: sh -c 'wait-for-it redis:6379 -t 60 && wait-for-it elastic:9200 -t 60 && php artisan schedule:run'
     volumes:
       - uploads:/app/storage/app/public
     deploy:
