fix console commands & bot

--- a/api/composer.json
+++ b/api/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "ext-pdo": "*",
         "ext-curl": "*",
+        "ext-redis": "*",
         "ext-simplexml": "*",
         "cviebrock/eloquent-sluggable": "^10.0",
         "cviebrock/laravel-elasticsearch": "^10.0",
