--- a/api/docker/common/nginx/conf.d/default.conf
+++ b/api/docker/common/nginx/conf.d/default.conf
@@ -19,8 +19,9 @@ server {
     }
 
     location ~ \.php$ {
+        set $upstream api-php-fpm:9000;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass api-php-fpm:9000;
+        fastcgi_pass $upstream;
         fastcgi_index index.php;
         fastcgi_read_timeout 300;
         include fastcgi_params;
