--- a/client/docker/prod/nginx/conf.d/default.conf
+++ b/client/docker/prod/nginx/conf.d/default.conf
@@ -22,8 +22,9 @@ server {
     }
 
     location / {
+        set $upstream http://client-node:3000;
         proxy_set_header  Host $host;
-        proxy_pass        http://client-node:3000;
+        proxy_pass        $upstream;
         proxy_redirect    off;
     }
 }
