--- a/panel/docker/dev/nginx/conf.d/default.conf
+++ b/panel/docker/dev/nginx/conf.d/default.conf
@@ -13,16 +13,18 @@ server {
     }
 
     location /ws {
+        set $upstream http://panel-node:3000;
         proxy_set_header  Host $host;
         proxy_set_header  Upgrade $http_upgrade;
         proxy_set_header  Connection "Upgrade";
-        proxy_pass        http://panel-node:3000;
+        proxy_pass        $upstream;
         proxy_redirect    off;
     }
 
     location / {
+        set $upstream http://panel-node:3000;
         proxy_set_header  Host $host;
-        proxy_pass        http://panel-node:3000;
+        proxy_pass        $upstream;
         proxy_redirect    off;
     }
 }
